metrique-macro/src/snapshots/metrique_macro__tests__sample_group_metrics_value_struct.snap
---
source: metrique-macro/src/lib.rs
expression: parsed_file
---
struct RequestValue {
    ignore: u32,
    value: &'static str,
}
#[doc(hidden)]
#[allow(clippy::type_complexity)]
pub struct RequestValueValue {
    #[deprecated(
        note = "these fields will become private in a future release. To introspect an entry, use `metrique::writer::test_util::test_entry`"
    )]
    #[doc(hidden)]
    value: <&'static str as metrique::CloseValue>::Closed,
}
impl ::metrique::writer::Value for RequestValueValue {
    const SHAPE: ::metrique::writer::core::descriptor::FieldShape<'static> = <<&'static str as ::metrique::CloseValue>::Closed as ::metrique::writer::Value>::SHAPE;
    fn write(&self, writer: impl ::metrique::writer::ValueWriter) {
        #[allow(deprecated)]
        {
            ::metrique::writer::Value::write(&self.value, writer);
        }
    }
}
impl ::metrique::writer::core::SampleGroup for RequestValueValue {
    fn as_sample_group(&self) -> ::std::borrow::Cow<'static, str> {
        #[allow(deprecated)]
        { ::metrique::writer::core::SampleGroup::as_sample_group(&self.value) }
    }
}
impl metrique::CloseValue for &'_ RequestValue {
    type Closed = RequestValueValue;
    fn close(self) -> Self::Closed {
        macro_rules! __metrique_self_expr {
            () => {
                self
            };
        }
        #[allow(deprecated)]
        RequestValueValue {
            value: metrique::CloseValue::close(
                ::metrique::IfYouSeeThisUseSubfieldOwned(&__metrique_self_expr!().value),
            ),
        }
    }
}
impl metrique::CloseValue for RequestValue {
    type Closed = RequestValueValue;
    fn close(self) -> Self::Closed {
        <&Self>::close(&self)
    }
}
